# Ticketing

./: CONTRIBUTING.md  Dockerfile  README.md
.github/workflows/: build.yml  deploy-api.yml  deploy-www.yml  shuttle.yml
api/: .gitignore  Cargo.toml  Dockerfile  Shuttle.toml  notification_template.html  sample.env  ticket_template.html
api/src/: auth.rs  handlers.rs  main.rs  sendgrid.rs  ticket.rs
api/src/middlewares/: auth.rs
api/src/tickets/: handlers.rs  mod.rs  models.rs  repository.rs
api/src/utils/: brevo.rs  mod.rs
server/: .gitignore  Cargo.toml  Dockerfile  notification_template.html  sample.env  tickets.sqlite3
server/src/: main.rs
server/src/middlewares/: auth.rs
server/src/status/: handlers.rs  routes.rs
server/src/tickets/: handlers.rs  mod.rs  repository.rs  routes.rs  service.rs
server/src/utils/: brevo.rs  db.rs  mod.rs  pagination.rs
www/: .dockerignore  .gitignore  Dockerfile  bun.lockb  package-lock.json  package.json  svelte.config.js  tailwind.config.ts
www/src/: app.css
www/src/components/: Toast.svelte
www/src/lib/: index.ts
www/src/lib/components/: Toast.svelte
www/src/lib/models/: ticket.ts
www/src/lib/services/: api.ts
www/src/models/: ticket.ts
www/src/routes/: +error.svelte  +layout.svelte  +page.svelte  Accordion.svelte  Barcode.svelte  Ticket.svelte  TicketDisplay.svelte  TicketForm.svelte  Toast.svelte  Tooltip.svelte
www/src/routes/admin/: +page.svelte  Dialog.svelte  Pagination.svelte  TicketRow.svelte  TokenForm.svelte
www/src/services/: api.ts
