[package]
name = "ticketing"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-runtime = { version = "0.45.0", default-features = false }
axum = "0.7.5"
shuttle-axum = "0.45.0"
mongodb = "2.6.0"
shuttle-shared-db = { version = "0.45.0", features = ["mongodb"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors", "timeout"] }
chrono = "0.4.31"
tokio = "1.28.2"
futures = "0.3.28"
regex = "1.9.4"
serde_json = "1.0.105"
serde = { version = "1.0.188", features = ["derive"] }
reqwest = { version = "0.12.4", features = ["json"] }
