[package]
name = "ticketing"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.1"
dotenv = "0.15.0"
mongodb = "2.8.2"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "timeout", "trace"] }
chrono = { version = "0.4.39", features = ["serde"] }
tokio = "1.28.2"
futures = "0.3.28"
regex = "1.9.4"
serde_json = "1.0.105"
serde = { version = "1.0.188", features = ["derive"] }
reqwest = { version = "0.12.4", features = ["json"] }
log = "0.4.14"
