[package]
name = "ticketing-api"
version = "1.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.16", features = ["v4", "serde"] }
actix-web = "4"
actix-cors = "0.7.1"
futures-util = "0.3.31"
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11"
serde_json = "1.0.105"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
r2d2 = "0.8"
r2d2_sqlite = "0.31"
rusqlite = { version = "0.37.0", features = ["chrono"] }
reqwest = { version = "0.12", features = ["json"] }
env_logger = "0.11"
